rbx_binary/src/tests/snapshots/rbx_binary__tests__util__physical-properties-acoustics__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: CustomProperties
  class: Part
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    AudioCanCollide:
      Bool: true
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - 0.6
          - 0.500013
          - 0.8
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CanQuery:
      Bool: true
    CanTouch:
      Bool: true
    Capabilities:
      SecurityCapabilities: 0
    CastShadow:
      Bool: true
    CollisionGroup:
      String: Default
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 163
        - 162
        - 165
    CustomPhysicalProperties:
      PhysicalProperties:
        density: 0.25
        friction: 0.5
        elasticity: 0.125
        frictionWeight: 1
        elasticityWeight: 0.25
        acousticAbsorption: 0.5
    EnableFluidForces:
      Bool: true
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    MaterialVariant:
      String: ""
    PivotOffset:
      CFrame:
        position:
          - 0
          - 0
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    Reflectance:
      Float32: 0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Sandboxed:
      Bool: false
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 4
        - 1
        - 2
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
- referent: referent-1
  name: NoCustomProperties
  class: Part
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    AudioCanCollide:
      Bool: true
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - 0.5999999
          - 1.500013
          - 0.79999995
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CanQuery:
      Bool: true
    CanTouch:
      Bool: true
    Capabilities:
      SecurityCapabilities: 0
    CastShadow:
      Bool: true
    CollisionGroup:
      String: Default
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 163
        - 162
        - 165
    CustomPhysicalProperties:
      PhysicalProperties: Default
    EnableFluidForces:
      Bool: true
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    MaterialVariant:
      String: ""
    PivotOffset:
      CFrame:
        position:
          - 0
          - 0
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    Reflectance:
      Float32: 0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Sandboxed:
      Bool: false
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 4
        - 1
        - 2
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
